--- a/popup.html
+++ b/popup.html
@@ -1,3 +1,16 @@
-<p>popup</p>
-
-<script src="popup.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <a target="_blank" href="https://github.com/szunaj13pl">
+    <img src="github-logo.png" alt="by Janusz Ładecki" title="by Janusz Ładecki" style="width: 100px;">
+     by Janusz Ładecki</a>
+    
+    <script src="popup.js"></script>
+</body>
+</html>
