--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a target="_blank" href="https://github.com/szunaj13pl">
+    <a target="_blank" href="https://github.com/szunaj13pl/PlaneItPokerRedmine">
     <img src="github-logo.png" alt="by Janusz Ładecki" title="by Janusz Ładecki" style="width: 100px;">
      by Janusz Ładecki</a>
     
